ndb - fixed for BUG#15021, binlog_index table become inconsistent if errors during purge of binlogs. if EMFILE error occured while purging binary logs, stop purging logs and report error message to user.